# CORE-client

./: .gitignore  CMakeLists.txt  README.md  conanfile.py
src/: main.cpp
